# chipate

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  defaults.cfg  shell.html
.github/workflows/: ci.yml
src/: asm.cpp  asm.h  chip8.cpp  chip8.h  log.h  main.cpp  opcode.h
tests/: test_asm.cpp  test_chip8.cpp  test_chip8_opcodes.cpp
